<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016-present. Drakeet Xu
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="HardcodedText">

    <item
        android:id="@+id/more"
        android:title="More ->"
        app:showAsAction="always"
        android:orderInCategory="1"
        tools:ignore="AlwaysShowAction"/>

    <item
        android:id="@+id/NormalActivity"
        android:title="NormalActivity"
        app:showAsAction="never"/>

    <item
        android:id="@+id/MultiSelectableActivity"
        android:title="MultiSelectableActivity"
        app:showAsAction="never"/>

    <item
        android:id="@+id/CommunicateWithBinderActivity"
        android:title="communicate with binder"
        app:showAsAction="never"/>

    <item
        android:id="@+id/BilibiliActivity"
        android:title="BilibiliActivity"
        app:showAsAction="never"/>

    <item
        android:id="@+id/WeiboActivity"
        android:title="WeiboActivity"
        app:showAsAction="never"/>

    <item
        android:id="@+id/OneDataToManyActivity"
        android:title="OneDataToManyActivity"
        app:showAsAction="never"/>

    <item
        android:id="@+id/TestPayloadActivity"
        android:title="TestPayloadActivity"
        app:showAsAction="never"/>

    <item
        android:id="@+id/MoreApisPlayground"
        android:title="MoreApisPlayground"
        app:showAsAction="never"/>

    <item
        android:id="@+id/ConcatActivity"
        android:title="ConcatActivity"
        app:showAsAction="never"
        />
</menu>
